# niche

./: Cargo.toml  README.md  plan.md  readme.md
.github/workflows/: ci.yml
R/: niche.R
scheme/: readme.md  square.scm  walk.scm
src/: lib.rs  main.rs  repl.rs  walk.rs
