[package]
name = "niche"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "niche"
path = "src/main.rs"

[lib]
name = "niche"
crate-type = ["cdylib"]

[features]
repl = ["steel-core"]

[dependencies]
rand = "0.8"
extendr-api = "0.7"
steel-core = { version = "0.8.2", optional = true }

[dev-dependencies]
